// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: ErrorNote should show all provided props 1`] = `
<ncnotecard-stub
  class="note-card"
  heading=""
  text=""
  type="error"
>
  <p
    class="note-card--title"
  >
    <b>
      Test error
    </b>
  </p>
   
  <p
    class="note-card--error-description"
  >
    <span>
      Test error message. 
    </span>
    <a
      class="link"
      href="http://example.com"
      target="_blank"
      title="Test link"
    >
      Test link
    </a>
  </p>
</ncnotecard-stub>
`;

exports[`Component: ErrorNote should show error title 1`] = `
<ncnotecard-stub
  class="note-card"
  heading=""
  text=""
  type="error"
>
  <p
    class="note-card--title"
  >
    <b>
      Test error
    </b>
  </p>
   
  <p
    class="note-card--error-description"
  >
    <!---->
    <!---->
  </p>
</ncnotecard-stub>
`;

exports[`Component: ErrorNote should show error title and error message 1`] = `
<ncnotecard-stub
  class="note-card"
  heading=""
  text=""
  type="error"
>
  <p
    class="note-card--title"
  >
    <b>
      Test error
    </b>
  </p>
   
  <p
    class="note-card--error-description"
  >
    <span>
      Test error message. 
    </span>
    <!---->
  </p>
</ncnotecard-stub>
`;
